# Qlik_ops

./: .env_sample  .env_test  .gitignore  Qlik_ops.py  README.md  app.py  backend.py  main.js  package-lock.json  package.json  pyproject.toml  requirements.txt  update_version.py
.github/workflows/: electron-build.yml  node.js.yml  nodejs.x  nodejs.yml
.streamlit/: secrets.toml
backend/: app.py  backend.py
backend/pages/: 01_Space_Manager.py
pages/: 01_Space_Manager.py  02_Group_Manager.py  03_QlikOps_Agent.py
python_embedded/: python313._pth
